[package]
name = "sct-batch-update"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
hyper = { version = "1.4.1", features = ["full"]}
tokio = { version = "1" , features = ["full"]}
tower = { version = "0.5.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = { version = "1.0.0-beta", features = ["from"] }
reqwest = { version = "0.12.7", features = ["json"] }
fhirbolt = { version = "0.4.0", features = ["fhirbolt-model", "r4"] }
fhir-sdk = { version = "0.14.1", features = ["r4b"] }
